Comment out remote site configurations in YAML
Comment out remote site configurations for ESnet and NERSC.

--- a/.github/workflows/matrix-generation.yaml
+++ b/.github/workflows/matrix-generation.yaml
@@ -19,18 +19,18 @@ jobs:
           - name: localhost
             site: http://127.0.0.1:8000
             type: local
-          - name: ESnet_East
-            site: https://iri-dev.ppg.es.net/
-            type: remote
-          - name: ESnet_West
-            site: https://esnet-west.sdn-sense.net/
-            type: remote
-          - name: NERSC
-            site: https://api.iri.nersc.gov/
-            type: remote
-          #- name: ALCF
-          #  site: https://api.alcf.anl.gov/
+          #- name: ESnet_East
+          #  site: https://iri-dev.ppg.es.net/
           #  type: remote
+          #- name: ESnet_West
+          #  site: https://esnet-west.sdn-sense.net/
+          #  type: remote
+          #- name: NERSC
+          #  site: https://api.iri.nersc.gov/
+          #  type: remote
+          - name: ALCF
+            site: https://api.alcf.anl.gov/
+            type: remote
 
     steps:
       - name: Checkout docs repository
